--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -69,7 +69,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <span class="skill-count_ps" style="font-size: 17px; color: white; float: right; padding-right: 5px;">70%</span>
             </div>
           </div>
-          <p>Competative Coding </p>
+          <p>Competitive Coding </p>
           <div class="skill">
             <div class="skill-bar skill_cc wow slideInLeft animated">
               <span class="skill-count_cc" style="font-size: 17px; color: white; float: right; padding-right: 5px;">50%</span>
@@ -145,37 +145,37 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience and Projects</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Website development for Aarohan / <a href="http://mitaarohan.netlify.com" target="_blank">mitaarohan.com</a></b></h5>
+          <h5 class="w3-opacity"><b>Full-Stack Intern and Campus Ambassador at <a href="https://bitgrit.net" style="color: darkblue;" target="_blank">bitgrit</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Front-End Developer Intern at <a href="https://apli.ai" style="color: darkblue;" target="_blank">Apli.ai</a>, IIT-Bombay</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>February 2020 - May 2020</h6>
+          <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
+          <hr>
+        </div>
+        <div class="w3-container hidework">
+          <h5 class="w3-opacity"><b>Website development for <a href="http://mitaarohan.netlify.com" style="color: darkblue;" target="_blank">Aarohan</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020</h6>
           <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
           <hr>
         </div>
         <div class="w3-container hidework">
-          <h5 class="w3-opacity"><b>ML Intern at AXS Solutions / <a href = "http://axs-solutions.com/" target="_blank">axs-solutions.com</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - July 2019</h6>
-          <p>I was an intern at AXS Solutions working on a project in the field of Deep Learning. The work exposure is off the charts, and the projects are very interesting as well as innovative.</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Data Analyst Intern at Bank of India / <a href="https://www.bankofindia.co.in/english/home.aspx" target = "_blank">www.bankofindia.co.in</a></b></h5>
+          <h5 class="w3-opacity"><b>Data Analyst Intern at <a href="https://www.bankofindia.co.in/english/home.aspx" target = "_blank" style="color: darkblue;">Bank of India</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - July 2019</h6>
           <p>Wanting to explore the depth of Data Analysis, Bank of India graciously accepted me as their intern, to learn and work on their training models. The team working here has given me immense support, and a good overview of what a Data Scientist does.</p>
           <hr>
         </div>
         <div class="w3-container hidework">
-          <h5 class="w3-opacity"><b>Web Developer at jS / <a href = "https://www.jamessolomon.co.in/" target="_blank">www.jamessolomon.co.in</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>I am the Web Developer of a new startup by James Solomon, known as jS. We are providing a student interactive platform, whose website will be launched in a short time.</p>
-          <hr>
-        </div>
-        <div class="w3-container hidework">
-          <h5 class="w3-opacity"><b>Web Programming at IdeaLake / <a href = "https://www.idealake.com/" target="_blank">www.idealake.com</a></b></h5>
+          <h5 class="w3-opacity"><b>Web Development at <a href = "https://www.idealake.com/" target="_blank" style="color: darkblue">IdeaLake</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2018 - July 2018</span></h6>
           <p>I started my training in web programming under the guidance of Idealake. The work environment was comfortable and my colleagues were highly trained professionals who made me a better version of myself.</p>
           <hr>
         </div>
         <div class="w3-container hidework">
-          <h5 class="w3-opacity"><b>App Developing at Bank of India / <a href="https://www.bankofindia.co.in/english/home.aspx" target = "_blank">www.bankofindia.co.in</a></b></h5>
+          <h5 class="w3-opacity"><b>App Developing at <a href="https://www.bankofindia.co.in/english/home.aspx" target = "_blank" style="color: darkblue;">Bank of India</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2017 - July 2017</h6>
           <p>I was introduced to Android Studio while I was working on an inventory app for Bank of India. My trainers made me visualize the endless possibilities Android Studio brings to us.</p>
         </div>
@@ -186,15 +186,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
     <div class="wow bounceInUp">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-chalkboard-teacher fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching Experience: <span class="wow flip">45</span> hours</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-chalkboard-teacher fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Community Ops and Tech-fluencer</h2>
         <div class="w3-container">
-            <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Game Development using JavaScript (for beginners) by The SCRIPT Group</p>
-            <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Basics of C Programming for First Year Students by The SCRIPT Group</p>
-            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> Data Structures Practical Examination Crash Course for Second Year CSE Students by School of CET, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> JAVA as Add-on Course for Third Year CSE students by School of CET, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Python as Add-on Course for Second Year CSE students by School of CET, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="1.2s"><i class="fa fa-code fa-xs fa-spin"></i> Cracking CodeX (Competative Coding Event) by The SCRIPT Group</p>
-            <p class="wow fadeIn" data-wow-delay="1.4s"><i class="fa fa-code fa-xs fa-spin"></i> Git and GitHub at HacktoberFest '19 by The SCRIPT Group powered by DigitalOcean</p>
+            <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Speaker at 5 international webinars for bitgrit to engage community during pandemic. (<a href="https://www.youtube.com/watch?v=YUPX0pNro_s&t=4633s" target="_blank" style="color: darkblue;">Link to YouTube</a>)</p>
+            <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Head Organizer at <a style="color: darkblue;" href="https://thescriptgroup.in" target="_blank">The S.C.R.I.P.T Group</a></p>
+            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> YouTube Content Creator for Developers and 100 Days of Code challengee! (<a style="color: darkblue;" href="https://www.youtube.com/channel/UCPK07RXLEV63B1lZmn8oTCg" target="_blank">YouTube Channel</a>)</p>
+            <p class="wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-code fa-xs fa-spin"></i> Taught JAVA and Python as Add-on Course Instructor for Third Year CSE students by School of CET, MIT-WPU</p>
           </div>
       </div>
     </div>
@@ -204,11 +201,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
             <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Participated in AngelHack Mumbai, 2019</p>
             <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> President of The S.C.R.I.P.T Group, MIT Pune <a href="https://thescriptgroup.in" target="_blank" style="font-size: 16px;">( Visit Our Website Here! )</a></a></p>
-            <p class="wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-code fa-xs fa-spin"></i> Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
-            <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> Attended Automation Anywhere Corporate Event.</p>
-            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
-            <p class="wow fadeIn" data-wow-delay="1.2s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
+            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-xs fa-spin"></i> Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
+            <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
+            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
         </div>
       </div>
     </div>
