Minor updates xD

--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -192,6 +192,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Head Organizer at <a style="color: darkblue;" href="https://thescriptgroup.in" target="_blank">The S.C.R.I.P.T Group</a></p>
             <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> YouTube Content Creator for Developers and 100 Days of Code challengee! (<a style="color: darkblue;" href="https://www.youtube.com/channel/UCPK07RXLEV63B1lZmn8oTCg" target="_blank">YouTube Channel</a>)</p>
             <p class="wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-code fa-xs fa-spin"></i> Taught JAVA and Python as Add-on Course Instructor for Third Year CSE students by School of CET, MIT-WPU</p>
+            <p class="wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-code fa-xs fa-spin"></i> 60+ hours of talks, workshop, webinar and teaching experience.</p>
           </div>
       </div>
     </div>
@@ -293,7 +294,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <a href="https://www.facebook.com/aniket.raj.1517" target="_blank"><i class="fab fa-facebook fa-2x w3-hover-opacity w3-padding"></i></a>
     <a href="https://www.linkedin.com/in/aniket-raj-8630b8180/" target="_blank"><i class="fab fa-linkedin fa-2x w3-hover-opacity w3-padding"></i></a>
     <a href="https://www.instagram.com/aniket_spidey/" target="_blank"><i class="fab fa-instagram fa-2x w3-hover-opacity w3-padding"></i></a>
-    <a href="https://twitter.com/aniketspidey" target="_blank"><i class="fab fa-twitter fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://twitter.com/aniket_spidey" target="_blank"><i class="fab fa-twitter fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://www.youtube.com/channel/UCPK07RXLEV63B1lZmn8oTCg" target="_blank"><i class="fab fa-youtube fa-2x w3-hover-opacity w3-padding"></i></a>
     <a href="https://github.com/aniket-spidey" target="_blank"><i class="fab fa-github fa-2x w3-hover-opacity w3-padding"></i></a><br><br>
   </div>
   <div class="wow tada w3-container padding_bottom">
