Made necessary corrections to internship experiences.
The template used in Aarohan's description was present in bitgrit's as well as Apli's description.
Should've taken care before making it public (smh)

Updated website.zip

--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -147,13 +147,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Full-Stack Intern and Campus Ambassador at <a href="https://bitgrit.net" style="color: darkblue;" target="_blank">bitgrit</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
+          <p>I am a Campus Ambassador for bitgrit. and along with that, I am privileged to work on the tech side at bitgrit as an intern. This is truly helping me get on board with the latest tech stacks, and understand them in depth. We explored KubeFlow APIs, researched how to train models on encrypted data, and much more.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Front-End Developer Intern at <a href="https://apli.ai" style="color: darkblue;" target="_blank">Apli.ai</a>, IIT-Bombay</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>February 2020 - May 2020</h6>
-          <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
+          <p>My role was more towards the Front-End aspect of the product. Apli is a great initiative for the welfare of the students, colleges, and companies hiring them as well. They are incubated by IIT-Bombay at their Monash Research Centre.</p>
           <hr>
         </div>
         <div class="w3-container hidework">
